--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="profile_name">
           Siyabonga Blose
           <div class="contact_info">
-          <img src="html_finalprojimages/readme.md/envelope.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
+          <img src="html_finalprojimages/envelope.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
           siyathelegacy26@gmail.com
         </div>
         <div class="contact_info">
