--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           siyathelegacy26@gmail.com
         </div>
         <div class="contact_info">
-        <img src="html_finalprojimages/readme.md/phone.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
+        <img src="html_finalprojimages/phone.png" alt="https://icons8.com/icon/124377/circled-envelope"/>
           +27646921373
 
         </div>
@@ -38,12 +38,12 @@
     <!-- About Me -->
     <section id="about-me" class="container">
       <div>
-        <img src="html_finalprojimages/readme.md/h42r_6u8u_220303.jpg" class="profile_image" width="60px" alt = "profile_image"/>
+        <img src="html_finalprojimages/h42r_6u8u_220303.jpg" class="profile_image" width="60px" alt = "profile_image"/>
       </div>
 
       <div>
           <h1>
-            Hi, I'm Siyabonga Blose! <img src = "html_finalprojimages/readme.md/waving-hand.png" width="60px" alt="" >
+            Hi, I'm Siyabonga Blose! <img src = "html_finalprojimages/waving-hand.png" width="60px" alt="" >
           </h1>
           <p>
             I am a Fullstack beginer programmer with just few weeks experience.
@@ -61,37 +61,37 @@
 
       <div class="all_skills">
         <div class="skill">
-          <img src="html_finalprojimages/readme.md/HTML5_logo_and_wordmark.svg.png" alt = "Skill"/>
+          <img src="html_finalprojimages/HTML5_logo_and_wordmark.svg.png" alt = "Skill"/>
           <h6>HTML</h6>
           <p>1 week experience</p>
         </div>  
 
         <div class="skill" >
-          <img src="html_finalprojimages/readme.md/JavaScript-Logo-500x281.png" alt = "Skill"/>
+          <img src="html_finalprojimages/JavaScript-Logo-500x281.png" alt = "Skill"/>
           <h6>JavaScript</h6>
           <p>1 week experience</p>
         </div>  
 
         <div class="skill">
-            <img src="html_finalprojimages/readme.md/css-logo.png" alt = "CSS logo"/>
+            <img src="html_finalprojimages/css-logo.png" alt = "CSS logo"/>
             <h6>CSS</h6>
             <p>1 week experience</p>
         </div> 
 
         <div class="skill">
-            <img src="html_finalprojimages/readme.md/png-transparent-java-logo-java-runtime-environment-computer-icons-java-platform-standard-edition-java-miscellaneous-text-logo-thumbnail.png" alt="java logo"/>
+            <img src="html_finalprojimages/png-transparent-java-logo-java-runtime-environment-computer-icons-java-platform-standard-edition-java-miscellaneous-text-logo-thumbnail.png" alt="java logo"/>
             <h6>Java</h6>
             <p>4 months experience</p>
         </div>  
   
         <div class="skill">
-            <img src="html_finalprojimages/readme.md/ISO_C++_Logo.svg.png" alt="C++ logo" />
+            <img src="html_finalprojimages/ISO_C++_Logo.svg.png" alt="C++ logo" />
             <h6>C++</h6>
             <p>1 year experience</p>
         </div> 
 
         <div class="skill">
-            <img src="html_finalprojimages/readme.md/microsoft-sql-server-logo.png" alt = "SQL logo"/>
+            <img src="html_finalprojimages/microsoft-sql-server-logo.png" alt = "SQL logo"/>
             <h6>SQL</h6>
             <p>4 month experience</p>
         </div> 
@@ -177,7 +177,7 @@
     </div>
   <!--popup message-->
     <div class="popup" id="popup" class="flex_center">
-      <img src="html_finalprojimages/readme.md/tick-circle.svg" alt="Final Project"/>
+      <img src="html_finalprojimages/tick-circle.svg" alt="Final Project"/>
       <h3>Thanks for leaving a recommendation!</h3>
       <button onclick="showPopup(false)">Ok</button>
     </div>
