--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Siyabonga Blose Portfolio</title>
-    <link rel="stylesheet"  href = "portfolio.css">
+    <link rel="stylesheet"  href = "style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 </head>
@@ -206,5 +206,5 @@
 
 </body>
 
-<script src = "portfolio.js"></script>
+<script src = "script.js"></script>
 </html>
