--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <p>Connect with me for project inquiries and collaborations</p>
           <div class="social-icons">
               <a href="https://www.linkedin.com/in/siyabonga-blose-080b301a2/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a>
-              <a href="https://github.com/siyathelegacy" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
+              <a href="https://siyathelegacy.github.io/SiyabongaBlose-Potfolio/" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
               <a href="https://wa.me/+27646921373?text=Hello%20I%20have%20a%20question" target="_blank" rel="noopener noreferrer"><i class="fab fa-whatsapp fa-2x"></i></a>
           </div>
           <p class="copyright">&copy 2025 Siyabonga Blose Portfolio. All Rights Reserved</p>
